--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,19 @@ services:
       POSTGRES_DB: ferreteria_db
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./backend/docker/init.sql:/docker-entrypoint-initdb.d/init.sql
+  
+  pgadmin:
+    image: dpage/pgadmin4
+    container_name: ferreteria-pgadmin
+    restart: always
+    ports:
+      - "5050:80"
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    depends_on:
+      - db
 
 volumes:
   postgres_data:
