se añadio nuevas controladores y routes para controlar el acceso al login y registro solo por personal autorizado

--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,7 @@ DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=adventista
 DB_NAME=ferreteria_db
+
+JWT_SECRET=supersecretkey
+JWT_EXPIRES_IN=1d
 #para el host local se debe usar localhost y para el contenedor se debe usar db y el password para el local es adventista y para el contenedor es postgres.
