--- a/backend/.env
+++ b/backend/.env
@@ -6,5 +6,5 @@ DB_PASSWORD=adventista
 DB_NAME=ferreteria_db
 
 JWT_SECRET=supersecretkey
-JWT_EXPIRES_IN=1d
+JWT_EXPIRES_IN=8h
 #para el host local se debe usar localhost y para el contenedor se debe usar db y el password para el local es adventista y para el contenedor es postgres.
