se preparo dockerfile en /frontned y docker-compose.yml en la raiz principal, se preparo para despliegue en docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,5 +39,15 @@ services:
     depends_on:
       - db
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    container_name: ferreteria-frontend
+    ports:
+      - "3000:80"
+    depends_on:
+      - backend
+
 volumes:
   postgres_data:
