se agrego despliegue

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
+DATABASE_URL=postgresql://ferreteria_db_6tzj_user:MD8XFn88y7pd8RPc48KYygYy0cnp25c2@dpg-d2kic0ndiees73c7rtj0-a/ferreteria_db_6tzj
+
 PORT=4000
 DB_HOST=localhost
 DB_PORT=5432
